--- a/package.json
+++ b/package.json
@@ -14,7 +14,17 @@
   "author": "ZURB <foundation@zurb.com>",
   "license": "MIT",
   "dependencies": {
-    "foundation-emails": "^2.2.1"
+    "clean-css": "^4.2.1",
+    "cryptiles": "^4.1.3",
+    "foundation-emails": "^2.2.1",
+    "hawk": "^7.0.10",
+    "hoek": "^6.1.3",
+    "js-yaml": "^3.13.1",
+    "lodash": "^4.17.14",
+    "lodash.merge": "^4.6.2",
+    "lodash.template": "^4.5.0",
+    "request": "^2.88.0",
+    "tunnel-agent": "^0.6.0"
   },
   "devDependencies": {
     "babel-core": "^6.3.26",
